Resolved: secondary page logo aligned.

--- a/star/src/styles/LogIn.css
+++ b/star/src/styles/LogIn.css
@@ -10,7 +10,7 @@
     height: 100%;
   }
 
-img {
+.logoLogin {
     justify-content: center;
     align-items: center;
     padding-top: 10%;
