--- a/star/src/styles/TextPreview.css
+++ b/star/src/styles/TextPreview.css
@@ -87,3 +87,11 @@ p {
   background: #ff7979;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.096);
 }
+
+.container{
+  padding-top: 20px;
+}
+
+.cont-logo{
+  padding-top: 0px;
+}
